// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`getMonarchShadowList generates correctly formatted list 1`] = `
"- @beru - Fastest scout. Codebase exploration, grep, file discovery, pattern search (supports background)
- @igris - Precise implementer + Style enforcer. Code changes, file editing, running commands, test verification, naming/convention enforcement
- @bellion - Master strategist. Strategic planning, architecture analysis, complex problem decomposition (supports background)
- @tusk - UI/UX specialist. Frontend development, UI/UX design, styling, components, animations
- @tank - External knowledge gatherer. Web search, documentation lookup, examples, best practices research (supports background)
- @shadow-sovereign - Deep reasoning + Skeptical reviewer. Deep reasoning, skeptical code review, verification, fake implementation detection, failure recovery
- @esil-radiru - Chat companion. Conversational dialogue, emotional understanding, thoughtful exchange, intent clarification"
`;

exports[`suggestShadowAgent snapshot test complex query 1`] = `
[
  "tusk",
  "beru",
  "igris",
]
`;

exports[`getShadowAgentsMarkdownTable generates correct Markdown table 1`] = `
"| Shadow Agent | Role | Best For |
| --- | --- | --- |
| 🐜 **beru** | Fastest scout | Finding files by name or pattern, Searching code for patterns or functions |
| ⚔️ **igris** | Precise implementer + Style enforcer | Implementing code changes, Editing files with precision |
| 🎖️ **bellion** | Master strategist | Planning complex refactoring, Architecture design decisions |
| 🎨 **tusk** | UI/UX specialist | Building UI components, Styling and layouts |
| 🛡️ **tank** | External knowledge gatherer | Finding external documentation, Researching best practices |
| 👁️ **shadow-sovereign** | Deep reasoning + Skeptical reviewer | Complex architectural decisions, Skeptical review after implementation |
| 🔥 **esil-radiru** | Chat companion | Casual conversation and chat, Understanding user intent and feelings |"
`;

exports[`getAllShadowNames snapshot test 1`] = `
[
  "beru",
  "igris",
  "bellion",
  "tusk",
  "tank",
  "shadow-sovereign",
  "esil-radiru",
]
`;

exports[`Snapshot tests for description outputs getShortDescription outputs are stable 1`] = `
[
  {
    "description": "🐜 Fastest scout - Codebase exploration, grep, file discovery, pattern search",
    "name": "beru",
  },
  {
    "description": "⚔️ Precise implementer + Style enforcer - Code changes, file editing, running commands, test verification, naming/convention enforcement",
    "name": "igris",
  },
  {
    "description": "🎖️ Master strategist - Strategic planning, architecture analysis, complex problem decomposition",
    "name": "bellion",
  },
  {
    "description": "🎨 UI/UX specialist - Frontend development, UI/UX design, styling, components, animations",
    "name": "tusk",
  },
  {
    "description": "🛡️ External knowledge gatherer - Web search, documentation lookup, examples, best practices research",
    "name": "tank",
  },
  {
    "description": "👁️ Deep reasoning + Skeptical reviewer - Deep reasoning, skeptical code review, verification, fake implementation detection, failure recovery",
    "name": "shadow-sovereign",
  },
  {
    "description": "🔥 Chat companion - Conversational dialogue, emotional understanding, thoughtful exchange, intent clarification",
    "name": "esil-radiru",
  },
]
`;

exports[`Snapshot tests for description outputs getFullDescription outputs are stable 1`] = `
[
  {
    "description": 
"🐜 Beru - Ant King Scout
Role: Fastest scout
Capabilities: Codebase exploration, grep, file discovery, pattern search
Best for:
  • Finding files by name or pattern
  • Searching code for patterns or functions
  • Understanding code structure
  • Quick codebase reconnaissance
Background: Supported"
,
    "name": "beru",
  },
  {
    "description": 
"⚔️ Igris - Loyal Knight
Role: Precise implementer + Style enforcer
Capabilities: Code changes, file editing, running commands, test verification, naming/convention enforcement
Best for:
  • Implementing code changes
  • Editing files with precision
  • Running build/test commands
  • Verifying changes work correctly
  • Fixing naming convention issues
  • Applying comment format rules
Background: Not supported"
,
    "name": "igris",
  },
  {
    "description": 
"🎖️ Bellion - Grand Marshal
Role: Master strategist
Capabilities: Strategic planning, architecture analysis, complex problem decomposition
Best for:
  • Planning complex refactoring
  • Architecture design decisions
  • Migration planning
  • Breaking down large tasks
Background: Supported"
,
    "name": "bellion",
  },
  {
    "description": 
"🎨 Tusk - Creative Shadow
Role: UI/UX specialist
Capabilities: Frontend development, UI/UX design, styling, components, animations
Best for:
  • Building UI components
  • Styling and layouts
  • Frontend integration
  • Design system work
Background: Not supported"
,
    "name": "tusk",
  },
  {
    "description": 
"🛡️ Tank - Research Shadow
Role: External knowledge gatherer
Capabilities: Web search, documentation lookup, examples, best practices research
Best for:
  • Finding external documentation
  • Researching best practices
  • Finding code examples
  • Learning new libraries/frameworks
Background: Supported"
,
    "name": "tank",
  },
  {
    "description": 
"👁️ Shadow-sovereign - Full Power
Role: Deep reasoning + Skeptical reviewer
Capabilities: Deep reasoning, skeptical code review, verification, fake implementation detection, failure recovery
Best for:
  • Complex architectural decisions
  • Skeptical review after implementation
  • Verify changes are truly correct
  • Detect fake/broken fixes
  • Debugging after multiple failed attempts
  • Recovery strategies
Background: Not supported"
,
    "name": "shadow-sovereign",
  },
  {
    "description": 
"🔥 Esil-radiru - Demon Noble Lady
Role: Chat companion
Capabilities: Conversational dialogue, emotional understanding, thoughtful exchange, intent clarification
Best for:
  • Casual conversation and chat
  • Understanding user intent and feelings
  • Clarifying requirements through dialogue
  • Emotional support and encouragement
Background: Not supported"
,
    "name": "esil-radiru",
  },
]
`;
